# PythonAutomationFrameworkWithSeleniumAndPytest

./: pyproject.toml
pages/: flight_finder_page.py  flight_finder_page_locators.py  index_page.py  index_page_locators.py  login_success_page_locators.py
tests/: flight_booking.py  test_login.py
