[tool.poetry]
name = "pythonautomationframeworkwithseleniumandpytest"
version = "0.1.0"
description = ""
authors = ["dhananjaya2007 <dhananjaya2007@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.19.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

